--- a/app/src/main/res/drawable/progress_bar_drawable.xml
+++ b/app/src/main/res/drawable/progress_bar_drawable.xml
@@ -10,7 +10,9 @@
             <size android:width="10dp"
                 android:height="10dp"/>
             <corners android:radius="5dp"/>
-
+            <stroke android:width="1dp"
+                android:color="@color/white"
+            />
         </shape>
     </item>
 
