--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -104,7 +104,9 @@
         android:focusable="false"
         android:hapticFeedbackEnabled="false"
         android:hint="@string/startDateTimeEditText"
-        android:textColorHint="@color/white"
+        android:text=""
+        android:textColor="@color/white"
+        android:textColorHint="@color/black"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.551"
@@ -134,7 +136,7 @@
         android:clickable="false"
         android:focusable="false"
         android:hint="@string/endDateTimeEditText"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/black"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
@@ -162,7 +164,7 @@
         android:layout_marginTop="28dp"
         android:background="@drawable/spinner_background"
         android:hint="@string/authorizationEditText"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/black"
         android:inputType="text"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
