--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -15,5 +15,9 @@
     <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
         android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
 
+    <path
+        android:fillColor="@android:color/widget_edittext_dark"
+        android:pathData="M7.41,8.59L12,13.17l4.59,-4.58L18,10l-6,6 -6,-6 1.41,-1.41z"
+        />
 
 </shape>
